# cxxJson

./: CMakeLists.txt  README.md  cxxJson.hpp  if.hpp  main.cpp  traits.hpp
include/cxxJson/: cxxJson.hpp  deserializer.hpp  serializer.hpp  traits.hpp
include/cxxJson/adapters/: adapter.hpp  boostptree.hpp  rapidjson.hpp
include/cxxJson/traits/: for_each.hpp  fusion_visitor.hpp  if.hpp  type.hpp
test/: CMakeLists.txt  deserializer_array.cpp  deserializer_object.cpp  deserializer_optional.cpp  deserializer_scalar.cpp  deserializer_selection.cpp  serializer_array.cpp  serializer_object.cpp  serializer_optional.cpp  serializer_scalar.cpp  test_types.hpp
